# ===----------------- Cargo.toml - The uhh Cargo.toml :)  -------------------===//
#
# This source file is part of the hydralang open source project
#
# Copyright (c) 2021 KittyBorgX and the englang project authors
# Licensed under Apache License v2.0 with Runtime Library Exception
#
# See https://github.com/KittyBorgX/hydralang/blob/main/LICENSE for license information
# See https://github.com/KittyBorgX/hydralang/blob/main/CONTRIBUTORS.md for the list of hydralang project authors

# ===----------------------------------------------------------------------===//

[package]
name = "lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
